# jock-lang

./: .gitignore  Cargo.toml  LICENSE  Makefile  PHILOSOPHY.md  README.md  ROADMAP.md  main.rs  notes.md  out.jam  rust-toolchain.toml  update-cargo.py
.data.choo/jams/: 0.jam  1.jam
.data.jock/jams/: 0.jam
.github/workflows/: build.yml
assets/: jocktest.jam
common/hoon/jib/: hoon.hoon  sequent.hoon
common/hoon/lib/: hoon.hoon  jock.hoon  mini.txt  sequent.hoon
common/hoon/try/: calculator-2.jock  fib.jock  fibonacci.jock  hello-world.jock  point.jock
crates/jock-compiler/: Cargo.toml
crates/jock-compiler/src/: compiler.rs  error.rs  lib.rs  nock.rs  subject.rs  tests.rs
crates/jock-parser/: Cargo.toml
crates/jock-parser/src/: ast.rs  error.rs  lib.rs  parser.rs  tests.rs
crates/jock-tokenizer/: Cargo.toml
crates/jock-tokenizer/src/: error.rs  lexer.rs  lib.rs  tests.rs  token.rs
crates/jockc/: Cargo.toml  main.rs
crates/jockc/hoon/: main.hoon
crates/jockc/hoon/lib/: mini.txt  runner.hoon
crates/jockc/hoon/try/: calculator.jock
crates/jockt/: Cargo.toml  main.rs
crates/jockt/hoon/: main.hoon
crates/jockt/hoon/lib/: jock.hoon  mini.txt  test-jock.hoon  wrapper.hoon
crates/jockt/hoon/lib/tests/: assert.jock  class-ops.jock  class-state.jock  comparator.jock  dec.jock  hoon-ffi.jock  if-elseif-else.jock  infix-arithmetic.jock  inline-lambda-call.jock  inline-point.jock  let-edit.jock  let-inner-exp.jock  lists.jock  match-case.jock  print-test.jock  strings.jock  type-point-2.jock  type-point-3.jock
crates/jockt/hoon/tests/lib/: assert.hoon  axis-call.hoon  baby.hoon  call-let-edit.hoon  call.hoon  class-ops.hoon  class-state.hoon  comparator.hoon  compose-cores.hoon  compose.hoon  dec.hoon  eval.hoon  example-atom.hoon  fib.hoon  hoon-alias.hoon  hoon-arithmetic.hoon  hoon-ffi.hoon  if-else.hoon  if-elseif-else.hoon  in-subj-call.hoon  infix-arithmetic.hoon  infix-comparator.hoon  inline-lambda-call.hoon  inline-lambda-no-arg.hoon  inline-point.hoon  let-edit.hoon  let-inner-exp.hoon  lists-indexing.hoon  lists-nested.hoon  lists.hoon  match-case.hoon  match-type.hoon  multi-limb.hoon  sets.hoon  type-point-2.hoon  type-point-3.hoon  type-point.hoon
crates/ockc/: Cargo.toml
crates/ockc/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/ockc/tests/: parser_fixtures.rs
hoon/: main.hoon
hoon/lib/: jock.hoon  mini.txt  test-jock.hoon  wrapper.hoon
hoon/lib/tests/: assert.jock  axis-call.jock  baby.jock  call-let-edit.jock  call.jock  class-state.jock  comparator.jock  compose-cores.jock  compose.jock  dec.jock  eval.jock  example-atom.jock  fib.jock  hoon-alias.jock  hoon-arithmetic.jock  hoon-ffi.jock  if-else.jock  if-elseif-else.jock  in-subj-call.jock  infix-arithmetic.hoon  infix-arithmetic.jock  infix-comparator.jock  inline-lambda-call.jock  inline-lambda-no-arg.jock  inline-point.jock  let-edit.jock  let-inner-exp.jock  list-type.jock  lists-indexing.jock  lists-nested.jock  lists.jock  match-case.jock  match-type.jock  match.jock  multi-limb.jock  print-test.jock  protocol.jock  sets.jock  type-point-2.jock  type-point-3.jock  (+1 more)
hoon/mar/: jock.hoon
hoon/tests/lib/: assert.hoon  axis-call.hoon  baby.hoon  call-let-edit.hoon  call.hoon  comparator.hoon  compose-cores.hoon  compose.hoon  dec.hoon  eval.hoon  example-atom.hoon  if-else.hoon  if-elseif-else.hoon  in-subj-call.hoon  infix-arithmetic.hoon  inline-lambda-call.hoon  inline-lambda-no-arg.hoon  inline-point.hoon  let-edit.hoon  let-inner-exp.hoon  lists-nested.hoon  lists.hoon  match-case.hoon  match-type.hoon  multi-limb.hoon  sets.hoon  type-point-2.hoon  type-point.hoon
