[package]
name = "jock-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
crown = { git = "https://github.com/zorp-corp/nockapp", rev="d950678e86caa4642fde6432a8d02d1e04b8bcae" }
sword = { git = "https://github.com/zorp-corp/sword.git", rev = "bcb2e7fba0e24d45d4887fae77389d7c5e86b507" }
sword_macros = { git = "https://github.com/zorp-corp/sword.git", rev = "bcb2e7fba0e24d45d4887fae77389d7c5e86b507" }
assert_no_alloc = { git = "https://github.com/zorp-corp/sword.git", rev = "bcb2e7fba0e24d45d4887fae77389d7c5e86b507" }
clap = { version = "4.4.4", features = ["derive", "cargo", "color", "env"]}
tokio = { version = "1.32", features = ["rt", "rt-multi-thread", "net", "macros", "io-util", "fs", "sync", "time"] }
tracing = "0.1.40"

[[bin]]
name = "jock-testing"
path = "main.rs"

[profile.dev]
opt-level = 3

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

