[workspace]
members = [
    "crates/jockc",
    "crates/jockt",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# Dependencies
[workspace.dependencies.jockc]
path = "crates/jockc"

[workspace.dependencies.jockt]
path = "crates/jockt"

[profile.dev]
opt-level = 3

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
