[workspace]
members = [
    "crates/jockc",
    "crates/jockt",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

# Dependencies
[workspace.dependencies.jockc]
path = "crates/jockc"

[workspace.dependencies.jockt]
path = "crates/jockt"

[workspace.dependencies]
nockapp = { git = "https://github.com/zorp-corp/nockchain", branch="master"}
nockvm = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
nockvm_macros = { git = "https://github.com/zorp-corp/nockchain", branch = "master" }
clap = "4.4.4"
tokio = { version = "1.32", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "rt",
    "signal",
] }
tracing = "0.1.41"

# Profiles
[profile.dev]
opt-level = 3

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
