[package]
name = "jockc"
version = "0.1.0-alpha"
edition.workspace = true

[dependencies]
nockapp = { workspace = true }
nockvm = { workspace = true }
nockvm_macros = { workspace = true }
clap = { workspace = true, features = ["derive", "cargo", "color", "env"] }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true }

[[bin]]
name = "jockc"
path = "main.rs"

[profile.dev]
opt-level = 3

[profile.dev-fast]
inherits = "dev"
opt-level = 3
debug = 2

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
